--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,13 +11,13 @@
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
   }
   
-  .card-sign .card-title {
+  .card-sign, .card-title {
     font-weight: 300;
     font-size: 1.5rem;
     text-transform: uppercase;
   }
   
-  .card-sign .card-body {
+  .card-sign, .card-body {
     padding: 2rem;
   }
   
