--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
                 <form class="form-signup">
                   <div class="form-label-group">
                     <label for="signup-username">Username (default)</label>
-                    <input type="text" id="signup-username" name="username" class="form-control" required autofocus readonly>
+                    <input type="text" id="signup-username" name="username" class="form-control" required autofocus>
                   </div>
                   <div class="form-label-group">
                     <label for="signup-password">Enter a password</label>
