Fixed issues with user_ids by adding in usernames and then updating user_ids after deletion so that they always are in order

--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@
                 <h2 class="card-title text-center">Sign up</h2>
                 <form class="form-signup">
                   <div class="form-label-group">
-                    <label for="signup-username">Username (default)</label>
+                    <label for="signup-username">Enter a username </label>
                     <input type="text" id="signup-username" name="username" class="form-control" required autofocus>
                   </div>
                   <div class="form-label-group">
